--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 body{
 font-family: sans-serif;
-font-weight: 800;
+
 }
 
 #main-div {
@@ -34,69 +34,16 @@ font-weight: 800;
     }
 }
 
-p {
+h1 {
     text-align: right;
-    font-size:xx-large;
-    color: white;
-}
-
-#mensaje {
-    width: 100%;
-    border-radius: 6px;
-    border: 0px;
-    margin-top: 10px;
-    resize: inherit;
-
-
-
-}
-
-#selector {
-    width: 25%;
-    border-radius: 6px;
-    border: 0px;
-    margin-top: 10px;
-    padding: 5px;
-}
-
-.botones{
-    display: flex;
-    justify-content: flex-end;
-  
-}
-
-.boton{
-    border: 0px;
-    border-radius: 6px;
-    background-color: black;
-    color: white;
+    font-size:3rem;
     font-weight: 800;
-    padding: 10px;
-    margin-left: 10px;
-}
-
-
-
-#borrar-boton:hover{
-    background-color: red;
     color: white;
 }
 
-#ejecutar-boton:hover{
-    background-color: green;
-    color: white;
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: white;
-} 
-
-::-webkit-scrollbar-thumb {
-    background-color: silver;
-    border: solid silver;
-    border-radius: 6px;
+p {
+    text-align: justify;
+    font-size: 1rem;
+    font-weight: 400;
+    color: black;
 }
